Some enhancement in add note

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <div class="card-body">
                 <h5 class="card-title">Add a note</h5>
                 <div class="form-floating">
-                    <textarea required rows="10" class="form-control" id="addTxt" placeholder="start typing"></textarea>
+                    <textarea required rows="10" name="note" class="form-control" id="addTxt" onchange="addNote()" placeholder="start typing"></textarea>
                 </div>
-                <button class="btn btn-primary my-2" id="addBtn">Add Note</button>
+                <input type="button"  class="btn btn-primary my-2" id="addBtn">Add Note</input>
             </div>
         </div>
         <hr>
@@ -73,7 +73,16 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="./index.js"></script>
+    <script src="./index.js">
+    function addNote(){
+        if(document.getElementById("addText").value=="")
+        { document.getElementById("addBtn").disabled=true;}
+        else {
+        button.disabled = false;
+    }
+    }
+            
+    </script>
 </body>
 
 </html>
