--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         if(document.getElementById("addText").value=="")
         { document.getElementById("addBtn").disabled=true;}
         else {
-        button.disabled = false;
+        document.getElementById("addBtn").disabled = false;
     }
     }
             
