--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="form-floating">
                     <textarea required rows="10" name="note" class="form-control" id="addTxt" onchange="addNote()" placeholder="start typing"></textarea>
                 </div>
-                <input type="button"  class="btn btn-primary my-2" id="addBtn">Add Note</input>
+                <Button  class="btn btn-primary my-2" id="addBtn">Add Note</Button>
             </div>
         </div>
         <hr>
